# eecs376

./: README.md  find_plane_pcd_file.cpp
alpha_lidar_alarm/: CMakeLists.txt  LICENSE  package.xml  setup.py
alpha_lidar_alarm/src/: lidar_alarm.py
alpha_maps/: CMakeLists.txt  package.xml  startingPenMapC.yaml
alpha_maps/gl2_map/: gl2_map.yaml
alpha_mobot_pub_des_state/: CMakeLists.txt  package.xml
alpha_mobot_pub_des_state/launch/: alpha_amcl_jinx.launch  alpha_amcl_jinx.launch~  alpha_jinx.launch  alpha_mobot.launch  alpha_mobot.launch~  alpha_mobot_mapping.launch
alpha_mobot_pub_des_state/src/: #pub_des_state_main.cpp#  pub_des_state.cpp  pub_des_state.h  pub_des_state_main.cpp  pub_des_state_main.cpp~  pub_des_state_path_client.cpp  pub_des_state_path_replanning_client.cpp
alpha_traj_builder/: CMakeLists.txt  package.xml
alpha_traj_builder/src/: traj_builder.cpp  traj_builder_example_main.cpp
gazebo_action_motion_ctrl/: package.xml~
gazebo_action_motion_ctrl/src/: my_action_server.cpp~
student_code/gazebo_action_motion_ctrl/: CMakeLists.txt  CMakeLists.txt~  package.xml
student_code/gazebo_action_motion_ctrl/action/: path.action  path.action~
student_code/gazebo_action_motion_ctrl/src/: my_action_client.cpp  my_action_client.cpp~  my_action_server.cpp
student_code/lidar_alarm/src/: lidar_alarm.cpp  lidar_alarm.cpp~
